--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@
     <!-- PROJECTS -->
   <section id="projects">
     <div>
-      <h2 class="projects-title">My Recent Works</h2>
+      <h2 id="projects-title">My Recent Works</h2>
     </div>
+
+    <hr id="works-hr" />
 
     <div>
       <div id="flex-projects">
-        <div>
+        <div class="center-img">
           <img src="./images/gymfit.png" alt="gymfit" />
         </div>
 
@@ -87,7 +89,7 @@
 
         <div class="demo-wrap">
           <div class="main-projects  demo-content">
-            <h3 id="link-project">Professional Art<br />Printing Data</h3>
+            <h3 class="link-project">Professional Art<br />Printing Data</h3>
 
             <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
 
@@ -105,7 +107,7 @@
 
         <div class="demo-wrap">
           <div class="main-projects  demo-content">
-            <h3>Professional Art<br />Printing Data</h3>
+            <h3 class="link-project">Professional Art<br />Printing Data</h3>
 
             <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
 
@@ -123,7 +125,7 @@
 
         <div class="demo-wrap">
           <div class="main-projects  demo-content">
-            <h3>Professional Art<br />Printing Data</h3>
+            <h3 class="link-project">Professional Art<br />Printing Data</h3>
 
             <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
 
@@ -141,7 +143,7 @@
 
         <div class="demo-wrap">
           <div class="main-projects  demo-content">
-            <h3>Professional Art<br />Printing Data</h3>
+            <h3 class="link-project">Professional Art<br />Printing Data</h3>
 
             <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
 
@@ -159,7 +161,7 @@
 
         <div class="demo-wrap">
           <div class="main-projects  demo-content">
-            <h3>Professional Art<br />Printing Data</h3>
+            <h3 class="link-project">Professional Art<br />Printing Data</h3>
 
             <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
 
@@ -177,7 +179,7 @@
 
         <div class="demo-wrap" id="last-item">
           <div class="main-projects demo-content">
-            <h3>Professional Art<br />Printing Data</h3>
+            <h3 class="link-project">Professional Art<br />Printing Data</h3>
 
             <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
 
@@ -203,7 +205,9 @@
       <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
 
       <a href="https://drive.google.com/file/d/1D3v3WMohFK-9VfpdwMAeVZudj8reqxcA/view?usp=sharing"></a><button class="button">Get My Resume</button></a>
+
       <hr />
+
       <ul>
         <li class="no-style">
           <ul class="list-style" id="diamond">
