Add h2 and line for 1st part of projects

--- a/index.html
+++ b/index.html
@@ -49,16 +49,17 @@
       <li><a href="https://medium.com/@nketchoguemilton"><img src="images/medium.svg" alt="Medium" width="55" height="55" /></a></li>
     </ul>
 
-    <img src="./images/Background.png" alt="Background">
+    <img id="headline-img" src="./images/Background.png" alt="background">
     </section>
 
     <!-- PROJECTS -->
   <section id="projects">
     <div>
-      <h2 id="projects-title">My Recent Works</h2>
+      <div>
+        <h2 id="projects-title">My Recent Works</h2>
+      </div>
+      <hr id="works-hr" />
     </div>
-
-    <hr id="works-hr" />
 
     <div>
       <div id="flex-projects">
@@ -199,7 +200,7 @@
   </section>
 
   <!-- FOOTER -->
-    <section id='about' class="about-me">
+    <section id="about-me">
       <h1>About me</h1>
 
       <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
