Fix see project

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     <nav>
       <ul id="menu">
         <li>
-          <a class="hidden-nav" href="">Portfolio</a>
+          <a class="hidden-nav" href="#projects">Portfolio</a>
         </li>
         <li>
-          <a class="hidden-nav" href="">About</a>
+          <a class="hidden-nav" href="#about-me">About</a>
         </li>
         <li>
-          <a class="hidden-nav" href="">Contact</a>
+          <a class="hidden-nav" href="#form">Contact</a>
         </li>
         <li>
-          <a href=""><img class="hidden-nav" src="images/mail.png" width="55" height="55" alt="mail"></a>
+          <a href="mailto:nketchoguemilton@gmail.com?&subject=Mail from our Website&body=I want to buy you a coffee"><img class="hidden-nav" src="images/mail.png" width="55" height="55" alt="mail"></a>
         </li>
         <li>
-          <a href=""><img id="hidden-img" src="images/more.png" alt="More" width="55" height="55"></a>
+          <img id="hidden-img" src="images/more.png" alt="More" width="55" height="55">
         </li>
       </ul>
     </nav>
@@ -55,19 +55,19 @@
     <!-- PROJECTS -->
   <section id="projects">
     <div>
+    <div>
       <div>
         <h2 id="projects-title">My Recent Works</h2>
       </div>
       <hr id="works-hr" />
     </div>
 
-    <div>
       <div id="flex-projects">
-        <div class="center-img">
+        <div class="center-img" id="projects-section-1">
           <img src="./images/gymfit.png" alt="gymfit" />
         </div>
 
-        <div>
+        <div id="projects-section-2">
           <h2>Multi-Post Stories</h2>
 
           <p>A daily selection of privately personalized reads; no accounts or
@@ -84,10 +84,10 @@
               <li>ruby</li>
             </ul>
           </div>
-
           <a href="#link-project"><button>See Project</button></a>
         </div>
-
+      </div>
+      <div>
         <div class="demo-wrap">
           <div class="main-projects  demo-content">
             <h3 class="link-project">Professional Art<br />Printing Data</h3>
