--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <p>I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
     </div>
 
-    <ul class="social-media">
+    <ul class="social-media" id="headline-social-media">
       <li><a href="https://github.com/miltonHenschel"><img src="images/github.svg" alt="GitHub" width="55" height="55" /></a></li>
       <li><a href="https://linkedin.com/in/henschelnketchoguem"><img src="images/linkedin.svg" alt="LinkedIn" width="25" height="55" /></a></li>
       <li><a href="https://www.angellist.com/"><img src="images/angellist.svg" alt="Angellist" width="55" height="55" /></a></li>
@@ -55,7 +55,7 @@
     <!-- PROJECTS -->
   <section id="projects">
     <div>
-    <div>
+    <div id="projects-section-1">
       <div>
         <h2 id="projects-title">My Recent Works</h2>
       </div>
@@ -63,7 +63,7 @@
     </div>
 
       <div id="flex-projects">
-        <div class="center-img" id="projects-section-1">
+        <div class="center-img">
           <img src="./images/gymfit.png" alt="gymfit" />
         </div>
 
