--- a/index.html
+++ b/index.html
@@ -269,19 +269,20 @@
         <textarea name="message" id="message" maxlength="500" placeholder="Write a message" required></textarea>
 
         <button id="form-button" class="button" type="submit">Get in touch</button>
-
-        <ul class="social-media" id="contact-social-form">
-          <li class="form-social-media"><a href="https://github.com/miltonHenschel"><img src="images/github.png" alt="GitHub" width="55" height="55" /></a></li>
-
-          <li class="form-social-media"><a href="https://linkedin.com/in/henschelnketchoguem"><img src="images/linkedin.png" alt="LinkedIn" width="25" height="55" /></a></li>
-
-          <li class="form-social-media"><a href="https://www.angellist.com/"><img src="images/angellist.png" alt="Angellist" width="55" height="55" /></a></li>
-
-          <li class="form-social-media"><a href="https://twitter.com/nketchogue"><img src="images/twitter.png" alt="Twitter" width="55" height="55" /></a></li>
-
-          <li class="form-social-media"><a href="https://medium.com/@nketchoguemilton"><img src="images/medium.png" alt="Medium" width="55" height="55" /></a></li>
-        </ul>
       </form>
     </footer>
+    <section id="social-media-footer">
+      <ul class="social-media" id="contact-social-form">
+        <li class="form-social-media"><a href="https://github.com/miltonHenschel"><img src="images/github.png" alt="GitHub" width="55" height="55" /></a></li>
+
+        <li class="form-social-media"><a href="https://linkedin.com/in/henschelnketchoguem"><img src="images/linkedin.png" alt="LinkedIn" width="25" height="55" /></a></li>
+
+        <li class="form-social-media"><a href="https://www.angellist.com/"><img src="images/angellist.png" alt="Angellist" width="55" height="55" /></a></li>
+
+        <li class="form-social-media"><a href="https://twitter.com/nketchogue"><img src="images/twitter.png" alt="Twitter" width="55" height="55" /></a></li>
+
+        <li class="form-social-media"><a href="https://medium.com/@nketchoguemilton"><img src="images/medium.png" alt="Medium" width="55" height="55" /></a></li>
+      </ul>
+    </section>
 </body>
 </html>
