--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
           <a href="#link-project"><button>See Project</button></a>
         </div>
       </div>
-      <div>
+
+      <div id="projects-section-3">
         <div class="demo-wrap">
           <div class="main-projects  demo-content">
             <h3 class="link-project">Professional Art<br />Printing Data</h3>
