Fix header and works sections for mobile version

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
   </header>
 
   <!-- HEADLINE -->
-  <section class="headline">
+  <section id="headline">
     <div>
-      <h1>Hey there! <br /> I’m Henschel.</h1>
+      <h1>Hey there! <br /> I’m Milton.</h1>
       <h2>I’am a Software Developer.</h2>
       <p>I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
     </div>
@@ -48,9 +48,7 @@
       <li><a href="https://twitter.com/nketchogue"><img src="images/twitter.svg" alt="Twitter" width="55" height="55" /></a></li>
       <li><a href="https://medium.com/@nketchoguemilton"><img src="images/medium.svg" alt="Medium" width="55" height="55" /></a></li>
     </ul>
-
-    <img id="headline-img" src="./images/Background.png" alt="background">
-    </section>
+  </section>
 
     <!-- PROJECTS -->
   <section id="projects">
