--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
 
     <!-- PROJECTS -->
   <section id="projects">
-    <div>
     <div id="projects-section-1">
       <div>
         <h2 id="projects-title">My Recent Works</h2>
@@ -60,6 +59,7 @@
       <hr id="works-hr" />
     </div>
 
+    <div>
       <div id="flex-projects">
         <div class="center-img">
           <img src="./images/gymfit.png" alt="gymfit" />
@@ -71,8 +71,7 @@
           <p>A daily selection of privately personalized reads; no accounts or
             sign-ups required. has been the industry's standard dummy text
             ever since the 1500s, when an unknown printer took a standard
-            dummy text. A daily selection of privately personalized reads; no
-            accounts or sign-ups required.</p>
+            dummy text.</p>
 
           <div class="lang-box">
             <ul class="social-media works-lang">
@@ -93,7 +92,7 @@
 
             <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
 
-            <div class="lang-box" id="lang-box">
+            <div class="lang-box">
               <ul class="social-media works-lang works-list">
                 <li>html</li>
                 <li>bootstrap</li>
@@ -110,25 +109,7 @@
 
             <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
 
-            <div class="lang-box" id="lang-box">
-              <ul class="social-media works-lang works-list">
-                <li>html</li>
-                <li>bootstrap</li>
-                <li>ruby</li>
-              </ul>
-            </div>
-
-            <a href=""></a><button class="flex-button">See Project</button></a>
-          </div>
-        </div>
-
-        <div class="demo-wrap">
-          <div class="main-projects  demo-content">
-            <h3 class="link-project">Professional Art<br />Printing Data</h3>
-
-            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-
-            <div class="lang-box" id="lang-box">
+            <div class="lang-box">
               <ul class="social-media works-lang works-list">
                 <li>html</li>
                 <li>bootstrap</li>
@@ -146,7 +127,7 @@
 
             <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
 
-            <div class="lang-box" id="lang-box">
+            <div class="lang-box">
               <ul class="social-media works-lang works-list">
                 <li>html</li>
                 <li>bootstrap</li>
@@ -164,7 +145,25 @@
 
             <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
 
-            <div class="lang-box" id="lang-box">
+            <div class="lang-box">
+              <ul class="social-media works-lang works-list">
+                <li>html</li>
+                <li>bootstrap</li>
+                <li>ruby</li>
+              </ul>
+            </div>
+
+            <a href=""></a><button class="flex-button">See Project</button></a>
+          </div>
+        </div>
+
+        <div class="demo-wrap">
+          <div class="main-projects  demo-content">
+            <h3 class="link-project">Professional Art<br />Printing Data</h3>
+
+            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+
+            <div class="lang-box">
               <ul class="social-media works-lang works-list">
                 <li>html</li>
                 <li>bootstrap</li>
@@ -182,7 +181,7 @@
 
             <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
 
-            <div class="lang-box" id="lang-box">
+            <div class="lang-box">
               <ul class="social-media works-lang works-list">
                 <li>html</li>
                 <li>bootstrap</li>
