--- a/index.html
+++ b/index.html
@@ -81,115 +81,98 @@
               <li>ruby</li>
             </ul>
           </div>
-          <a href="#link-project"><button>See Project</button></a>
+          <a href="#link-project"><button class="project-button">See Project</button></a>
         </div>
       </div>
 
       <div id="projects-section-3">
-        <div class="demo-wrap">
-          <div class="main-projects  demo-content">
-            <h3 class="link-project">Professional Art<br />Printing Data</h3>
-
-            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-
+        <div>
+          <div class="project-detail">
+            <h3 class="project-heading">Professional Art<br />Printing Data</h3>
+            <p class="project-par">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
             <div class="lang-box">
-              <ul class="social-media works-lang works-list">
+              <ul class="project-social-media">
                 <li>html</li>
                 <li>bootstrap</li>
                 <li>ruby</li>
               </ul>
             </div>
-            <a href=""></a><button class="flex-button">See Project</button></a>
+            <a href="#"></a><button class="flex-button">See Project</button></a>
           </div>
         </div>
 
-        <div class="demo-wrap">
-          <div class="main-projects  demo-content">
-            <h3 class="link-project">Professional Art<br />Printing Data</h3>
-
-            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-
+        <div>
+          <div class="project-detail">
+            <h3 class="project-heading">Professional Art<br />Printing Data</h3>
+            <p class="project-par">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
             <div class="lang-box">
-              <ul class="social-media works-lang works-list">
+              <ul class="project-social-media">
                 <li>html</li>
                 <li>bootstrap</li>
                 <li>ruby</li>
               </ul>
             </div>
-
-            <a href=""></a><button class="flex-button">See Project</button></a>
+            <a href="#"></a><button class="flex-button">See Project</button></a>
           </div>
         </div>
 
-        <div class="demo-wrap">
-          <div class="main-projects  demo-content">
-            <h3 class="link-project">Professional Art<br />Printing Data</h3>
-
-            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-
+        <div>
+          <div class="project-detail">
+            <h3 class="project-heading">Professional Art<br />Printing Data</h3>
+            <p class="project-par">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
             <div class="lang-box">
-              <ul class="social-media works-lang works-list">
+              <ul class="project-social-media">
                 <li>html</li>
                 <li>bootstrap</li>
                 <li>ruby</li>
               </ul>
             </div>
-
-            <a href=""></a><button class="flex-button">See Project</button></a>
+            <a href="#"></a><button class="flex-button">See Project</button></a>
           </div>
         </div>
 
-        <div class="demo-wrap">
-          <div class="main-projects  demo-content">
-            <h3 class="link-project">Professional Art<br />Printing Data</h3>
-
-            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-
+        <div>
+          <div class="project-detail">
+            <h3 class="project-heading">Professional Art<br />Printing Data</h3>
+            <p class="project-par">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
             <div class="lang-box">
-              <ul class="social-media works-lang works-list">
+              <ul class="project-social-media">
                 <li>html</li>
                 <li>bootstrap</li>
                 <li>ruby</li>
               </ul>
             </div>
-
-            <a href=""></a><button class="flex-button">See Project</button></a>
+            <a href="#"></a><button class="flex-button">See Project</button></a>
           </div>
         </div>
 
-        <div class="demo-wrap">
-          <div class="main-projects  demo-content">
-            <h3 class="link-project">Professional Art<br />Printing Data</h3>
-
-            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-
+        <div>
+          <div class="project-detail">
+            <h3 class="project-heading">Professional Art<br />Printing Data</h3>
+            <p class="project-par">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
             <div class="lang-box">
-              <ul class="social-media works-lang works-list">
+              <ul class="project-social-media">
                 <li>html</li>
                 <li>bootstrap</li>
                 <li>ruby</li>
               </ul>
             </div>
-
-            <a href=""></a><button class="flex-button">See Project</button></a>
+            <a href="#"></a><button class="flex-button">See Project</button></a>
           </div>
         </div>
 
-        <div class="demo-wrap" id="last-item">
-          <div class="main-projects demo-content">
-            <h3 class="link-project">Professional Art<br />Printing Data</h3>
-
-            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-
+        <div>
+          <div class="project-detail">
+            <h3 class="project-heading">Professional Art<br />Printing Data</h3>
+            <p class="project-par">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
             <div class="lang-box">
-              <ul class="social-media works-lang works-list">
+              <ul class="project-social-media">
                 <li>html</li>
                 <li>bootstrap</li>
                 <li>ruby</li>
               </ul>
             </div>
-
-            <a href=""></a><button class="flex-button">See Project</button></a>
+            <a href="#"></a><button class="flex-button">See Project</button></a>
           </div>
         </div>
       </div>
@@ -198,13 +181,14 @@
 
   <!-- FOOTER -->
     <section id="about-me">
-      <h1>About me</h1>
+      <div id="about-me-div">
+        <h1>About me</h1>
 
-      <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
+        <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
 
-      <a href="https://drive.google.com/file/d/1D3v3WMohFK-9VfpdwMAeVZudj8reqxcA/view?usp=sharing"></a><button class="button">Get My Resume</button></a>
-
-      <hr />
+        <a href="https://drive.google.com/file/d/1D3v3WMohFK-9VfpdwMAeVZudj8reqxcA/view?usp=sharing"></a><button class="project-button">Get My Resume</button></a>
+        <hr />
+      </div>
 
       <section id="about-me-lang">
         <div>
@@ -265,7 +249,7 @@
 
         <textarea name="message" id="message" maxlength="500" placeholder="Write a message" required></textarea>
 
-        <button id="form-button" class="button" type="submit">Get in touch</button>
+        <button id="form-button" class="project-button" type="submit">Get in touch</button>
       </form>
     </footer>
     <section id="social-media-footer">
@@ -280,6 +264,7 @@
 
         <li class="form-social-media"><a href="https://medium.com/@nketchoguemilton"><img src="images/medium.png" alt="Medium" width="55" height="55" /></a></li>
       </ul>
+      <hr />
     </section>
 </body>
 </html>
