Fix about me and footer sections in desktop versions

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a href="mailto:nketchoguemilton@gmail.com?&subject=Mail from our Website&body=I want to buy you a coffee"><img class="hidden-nav" src="images/mail.png" width="55" height="55" alt="mail"></a>
         </li>
         <li>
-          <img id="hidden-img" src="images/more.png" alt="More" width="55" height="55">
+          <img class="hidden-img" src="images/more.png" alt="More" width="55" height="55">
         </li>
       </ul>
     </nav>
