Fix projects section using grid in desktop version

--- a/index.html
+++ b/index.html
@@ -87,7 +87,22 @@
 
       <div id="projects-section-3">
         <div>
-          <div class="project-detail">
+          <div id="project-1">
+            <h3 class="project-heading hidden-obj">Professional Art<br />Printing Data</h3>
+            <p class="project-par hidden-obj">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+            <div class="lang-box hidden-obj">
+              <ul class="project-social-media">
+                <li>html</li>
+                <li>bootstrap</li>
+                <li>ruby</li>
+              </ul>
+            </div>
+            <a href="#"></a><button id="project-1-button">See Project</button></a>
+          </div>
+        </div>
+
+        <div>
+          <div class="project-2">
             <h3 class="project-heading">Professional Art<br />Printing Data</h3>
             <p class="project-par">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
             <div class="lang-box">
@@ -102,7 +117,7 @@
         </div>
 
         <div>
-          <div class="project-detail">
+          <div class="project-3">
             <h3 class="project-heading">Professional Art<br />Printing Data</h3>
             <p class="project-par">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
             <div class="lang-box">
@@ -117,7 +132,7 @@
         </div>
 
         <div>
-          <div class="project-detail">
+          <div id="project-4">
             <h3 class="project-heading">Professional Art<br />Printing Data</h3>
             <p class="project-par">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
             <div class="lang-box">
@@ -132,7 +147,7 @@
         </div>
 
         <div>
-          <div class="project-detail">
+          <div class="project-2">
             <h3 class="project-heading">Professional Art<br />Printing Data</h3>
             <p class="project-par">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
             <div class="lang-box">
@@ -147,22 +162,7 @@
         </div>
 
         <div>
-          <div class="project-detail">
-            <h3 class="project-heading">Professional Art<br />Printing Data</h3>
-            <p class="project-par">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-            <div class="lang-box">
-              <ul class="project-social-media">
-                <li>html</li>
-                <li>bootstrap</li>
-                <li>ruby</li>
-              </ul>
-            </div>
-            <a href="#"></a><button class="flex-button">See Project</button></a>
-          </div>
-        </div>
-
-        <div>
-          <div class="project-detail">
+          <div class="project-3">
             <h3 class="project-heading">Professional Art<br />Printing Data</h3>
             <p class="project-par">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
             <div class="lang-box">
