Add transition and animation & broken links

--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 
   <!-- NAVBAR -->
   <header class="nav">
-    <a href="">Henschel</a>
+    <a id="nav-first-a" href="#headline">Henschel</a>
     <nav>
       <ul id="menu">
         <li>
-          <a class="hidden-nav" href="#projects">Portfolio</a>
+          <a class="hidden-nav" href="#projects-section-2">Portfolio</a>
         </li>
         <li>
-          <a class="hidden-nav" href="#about-me">About</a>
+          <a class="hidden-nav" href="#about-me-div">About</a>
         </li>
         <li>
           <a class="hidden-nav" href="#form">Contact</a>
         </li>
         <li>
-          <a href="mailto:nketchoguemilton@gmail.com?&subject=Mail from our Website&body=I want to buy you a coffee"><img class="hidden-nav" src="images/mail.png" width="55" height="55" alt="mail"></a>
+          <a href="#social-media-footer"><img class="hidden-nav" src="images/mail.png" width="55" height="55" alt="social-media"></a>
         </li>
         <li>
-          <img class="hidden-img" src="images/more.png" alt="More" width="55" height="55">
+          <a><img class="hidden-img" src="images/more.png" alt="More" width="55" height="55"></a>
         </li>
       </ul>
     </nav>
@@ -186,7 +186,7 @@
 
         <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
 
-        <a href="https://drive.google.com/file/d/1D3v3WMohFK-9VfpdwMAeVZudj8reqxcA/view?usp=sharing"></a><button class="project-button">Get My Resume</button></a>
+        <a href="https://drive.google.com/file/d/1D3v3WMohFK-9VfpdwMAeVZudj8reqxcA/view?usp=sharing" target="_blank"><button class="project-button">Get My Resume</button></a>
         <hr />
       </div>
 
