Fix gird item-1 button and broken icons

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
           <a class="hidden-nav" href="#form">Contact</a>
         </li>
         <li>
-          <a href="#social-media-footer"><img class="hidden-nav" src="images/mail.png" width="55" height="55" alt="social-media"></a>
+          <a href="#social-media-footer"><img class="hidden-nav" src="images/nav/mail.png" width="55" height="55" alt="social-media"></a>
         </li>
         <li>
-          <a><img class="hidden-img" src="images/more.png" alt="More" width="55" height="55"></a>
+          <a><img class="hidden-img" src="images/nav/more.png" alt="More" width="55" height="55"></a>
         </li>
       </ul>
     </nav>
@@ -42,11 +42,11 @@
     </div>
 
     <ul class="social-media" id="headline-social-media">
-      <li><a href="https://github.com/miltonHenschel"><img src="images/github.svg" alt="GitHub" width="55" height="55" /></a></li>
-      <li><a href="https://linkedin.com/in/henschelnketchoguem"><img src="images/linkedin.svg" alt="LinkedIn" width="25" height="55" /></a></li>
-      <li><a href="https://www.angellist.com/"><img src="images/angellist.svg" alt="Angellist" width="55" height="55" /></a></li>
-      <li><a href="https://twitter.com/nketchogue"><img src="images/twitter.svg" alt="Twitter" width="55" height="55" /></a></li>
-      <li><a href="https://medium.com/@nketchoguemilton"><img src="images/medium.svg" alt="Medium" width="55" height="55" /></a></li>
+      <li><a href="https://github.com/miltonHenschel"><img src="images/social-media-header/github.png" alt="GitHub" /></a></li>
+      <li><a href="https://linkedin.com/in/henschelnketchoguem"><img src="images/social-media-header/linkedin.png" alt="LinkedIn" /></a></li>
+      <li><a href="https://www.angellist.com/"><img src="images/social-media-header/angellist.png" alt="Angel list" /></a></li>
+      <li><a href="https://twitter.com/nketchogue"><img src="images/social-media-header/twitter.png" alt="Twitter" /></a></li>
+      <li><a href="https://medium.com/@nketchoguemilton"><img src="images/social-media-header/medium.png" alt="Medium" /></a></li>
     </ul>
   </section>
 
@@ -62,7 +62,7 @@
     <div>
       <div id="flex-projects">
         <div class="center-img">
-          <img src="./images/gymfit.png" alt="gymfit" />
+          <img src="./images/projects/gymfit.png" alt="gymfit" />
         </div>
 
         <div id="projects-section-2">
@@ -97,8 +97,9 @@
                 <li>ruby</li>
               </ul>
             </div>
-            <a href="#"></a><button id="project-1-button">See Project</button></a>
+            <a href="#"><button id="project-1-button-hidden">See Project</button></a>
           </div>
+          <a href="#"><button id="project-1-button">See Project</button></a>
         </div>
 
         <div>
@@ -112,8 +113,8 @@
                 <li>ruby</li>
               </ul>
             </div>
-            <a href="#"></a><button class="flex-button">See Project</button></a>
           </div>
+          <a href="#"><button class="flex-button">See Project</button></a>
         </div>
 
         <div>
@@ -127,8 +128,8 @@
                 <li>ruby</li>
               </ul>
             </div>
-            <a href="#"></a><button class="flex-button">See Project</button></a>
           </div>
+          <a href="#"><button class="flex-button">See Project</button></a>
         </div>
 
         <div>
@@ -142,8 +143,8 @@
                 <li>ruby</li>
               </ul>
             </div>
-            <a href="#"></a><button class="flex-button">See Project</button></a>
           </div>
+          <a href="#"><button class="flex-button">See Project</button></a>
         </div>
 
         <div>
@@ -157,8 +158,8 @@
                 <li>ruby</li>
               </ul>
             </div>
-            <a href="#"></a><button class="flex-button">See Project</button></a>
           </div>
+          <a href="#"><button class="flex-button">See Project</button></a>
         </div>
 
         <div>
@@ -172,8 +173,8 @@
                 <li>ruby</li>
               </ul>
             </div>
-            <a href="#"></a><button class="flex-button">See Project</button></a>
           </div>
+          <a href="#"><button class="flex-button">See Project</button></a>
         </div>
       </div>
     </div>
@@ -193,7 +194,7 @@
       <section id="about-me-lang">
         <div>
           <div>
-            <img src="./images/diamond.png" alt="diamond" />
+            <img src="./images/bullets/diamond.png" alt="diamond" />
             <h2>Languages</h2>
           </div>
           <ul>
@@ -206,7 +207,7 @@
 
         <div>
           <div>
-            <img src="./images/square.png" alt="square" />
+            <img src="./images/bullets/square.png" alt="square" />
             <h2>Frameworks</h2>
           </div>
           <ul>
@@ -220,7 +221,7 @@
 
         <div>
           <div>
-            <img src="./images/rectangle.png" alt="square" />
+            <img src="./images/bullets/disc.png" alt="square" />
             <h2>Skills</h2>
           </div>
           <ul>
@@ -250,17 +251,13 @@
     </footer>
     <section id="social-media-footer">
       <ul class="social-media" id="contact-social-form">
-        <li class="form-social-media"><a href="https://github.com/miltonHenschel"><img src="images/github.png" alt="GitHub" width="55" height="55" /></a></li>
-
-        <li class="form-social-media"><a href="https://linkedin.com/in/henschelnketchoguem"><img src="images/linkedin.png" alt="LinkedIn" width="25" height="55" /></a></li>
-
-        <li class="form-social-media"><a href="https://www.angellist.com/"><img src="images/angellist.png" alt="Angellist" width="55" height="55" /></a></li>
-
-        <li class="form-social-media"><a href="https://twitter.com/nketchogue"><img src="images/twitter.png" alt="Twitter" width="55" height="55" /></a></li>
-
-        <li class="form-social-media"><a href="https://medium.com/@nketchoguemilton"><img src="images/medium.png" alt="Medium" width="55" height="55" /></a></li>
+        <li class="form-social-media"><a href="https://github.com/miltonHenschel"><img src="images/social-media-footer/github.png" alt="Linkedin" /></a></li>
+        <li class="form-social-media"><a href="https://linkedin.com/in/henschelnketchoguem"><img src="images/social-media-footer/linkedin.png" alt="LinkedIn" /></a></li>
+        <li class="form-social-media"><a href="https://www.angellist.com/"><img src="images/social-media-footer/angellist.png" alt="Angel list" /></a></li>
+        <li class="form-social-media"><a href="https://twitter.com/nketchogue"><img src="images/social-media-footer/twitter.png" alt="Twitter" /></a></li>
+        <li class="form-social-media"><a href="https://medium.com/@nketchoguemilton"><img src="images/social-media-footer/medium.png" alt="Medium" /></a></li>
       </ul>
-      <hr />
+      <img id="social-media-footer-img" src="images/social-media-footer/line.png" alt="line">
     </section>
 </body>
 </html>
