--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <!-- NAVBAR -->
-  <header class="nav">
+  <header id="nav">
     <a id="nav-first-a" href="#headline">Henschel</a>
     <nav>
       <ul id="menu">
@@ -236,7 +236,7 @@
     </section>
 
     <!-- FOOTER  -->
-    <footer id="form">
+    <section id="form">
       <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
 
       <form id="contact-form" action="https://formspree.io/f/mrgdolqb" method="POST">
@@ -248,16 +248,16 @@
 
         <button id="form-button" class="project-button" type="submit">Get in touch</button>
       </form>
-      <section id="social-media-footer">
-        <ul class="social-media" id="contact-social-form">
-          <li class="form-social-media"><a href="https://github.com/miltonHenschel"><img src="images/social-media-footer/github.png" alt="Linkedin" /></a></li>
-          <li class="form-social-media"><a href="https://linkedin.com/in/henschelnketchoguem"><img src="images/social-media-footer/linkedin.png" alt="LinkedIn" /></a></li>
-          <li class="form-social-media"><a href="https://www.angellist.com/"><img src="images/social-media-footer/angellist.png" alt="Angel list" /></a></li>
-          <li class="form-social-media"><a href="https://twitter.com/nketchogue"><img src="images/social-media-footer/twitter.png" alt="Twitter" /></a></li>
-          <li class="form-social-media"><a href="https://medium.com/@nketchoguemilton"><img src="images/social-media-footer/medium.png" alt="Medium" /></a></li>
-        </ul>
-        <img id="social-media-footer-img" src="images/social-media-footer/line.png" alt="line">
-      </section>
+    </section>
+    <footer id="social-media-footer">
+      <ul class="social-media" id="contact-social-form">
+        <li class="form-social-media"><a href="https://github.com/miltonHenschel"><img src="images/social-media-footer/github.png" alt="Linkedin" /></a></li>
+        <li class="form-social-media"><a href="https://linkedin.com/in/henschelnketchoguem"><img src="images/social-media-footer/linkedin.png" alt="LinkedIn" /></a></li>
+        <li class="form-social-media"><a href="https://www.angellist.com/"><img src="images/social-media-footer/angellist.png" alt="Angel list" /></a></li>
+        <li class="form-social-media"><a href="https://twitter.com/nketchogue"><img src="images/social-media-footer/twitter.png" alt="Twitter" /></a></li>
+        <li class="form-social-media"><a href="https://medium.com/@nketchoguemilton"><img src="images/social-media-footer/medium.png" alt="Medium" /></a></li>
+      </ul>
+      <img id="social-media-footer-img" src="images/social-media-footer/line.png" alt="line">
     </footer>
 </body>
 </html>
