Fix stylelint errors

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     </div>
   </section>
 
-  <!-- FOOTER -->
+  <!-- ABOUT ME -->
     <section id="about-me">
       <div id="about-me-div">
         <h1>About me</h1>
@@ -235,7 +235,7 @@
       </section>
     </section>
 
-    <!-- FOOTER  -->
+    <!-- FORM  -->
     <section id="form">
       <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
 
@@ -249,6 +249,8 @@
         <button id="form-button" class="project-button" type="submit">Get in touch</button>
       </form>
     </section>
+
+    <!-- FOOTER  -->
     <footer id="social-media-footer">
       <ul class="social-media" id="contact-social-form">
         <li class="form-social-media"><a href="https://github.com/miltonHenschel"><img src="images/social-media-footer/github.png" alt="Linkedin" /></a></li>
