make the title more accessible

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
+  <title>Henschel's Portfolio</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -24,7 +25,8 @@
           <a class="hidden-nav" href="#form">Contact</a>
         </li>
         <li>
-          <a href="#social-media-footer"><img class="hidden-nav" src="images/nav/mail.png" width="55" height="55" alt="social-media"></a>
+          <a href="#social-media-footer"><img class="hidden-nav" src="images/nav/mail.png" width="55" height="55"
+              alt="social-media"></a>
         </li>
         <li>
           <a><img class="hidden-img" src="images/nav/more.png" alt="More" width="55" height="55"></a>
@@ -38,19 +40,25 @@
     <div>
       <h1>Hey there! <br /> I’m Milton.</h1>
       <h2>I’am a Software Developer.</h2>
-      <p>I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
+      <p>I can help you build a product , feature or website. Look through some of my work and experience! If you like
+        what you see and have a project you need coded, don’t hesitate to contact me.</p>
     </div>
 
     <ul class="social-media" id="headline-social-media">
-      <li><a href="https://github.com/miltonHenschel"><img src="images/social-media-header/github.png" alt="GitHub" /></a></li>
-      <li><a href="https://linkedin.com/in/henschelnketchoguem"><img src="images/social-media-header/linkedin.png" alt="LinkedIn" /></a></li>
-      <li><a href="https://www.angellist.com/"><img src="images/social-media-header/angellist.png" alt="Angel list" /></a></li>
-      <li><a href="https://twitter.com/nketchogue"><img src="images/social-media-header/twitter.png" alt="Twitter" /></a></li>
-      <li><a href="https://medium.com/@nketchoguemilton"><img src="images/social-media-header/medium.png" alt="Medium" /></a></li>
+      <li><a href="https://github.com/miltonHenschel"><img src="images/social-media-header/github.png"
+            alt="GitHub" /></a></li>
+      <li><a href="https://linkedin.com/in/henschelnketchoguem"><img src="images/social-media-header/linkedin.png"
+            alt="LinkedIn" /></a></li>
+      <li><a href="https://www.angellist.com/"><img src="images/social-media-header/angellist.png"
+            alt="Angel list" /></a></li>
+      <li><a href="https://twitter.com/nketchogue"><img src="images/social-media-header/twitter.png"
+            alt="Twitter" /></a></li>
+      <li><a href="https://medium.com/@nketchoguemilton"><img src="images/social-media-header/medium.png"
+            alt="Medium" /></a></li>
     </ul>
   </section>
 
-    <!-- PROJECTS -->
+  <!-- PROJECTS -->
   <section id="projects">
     <div id="projects-section-1">
       <div>
@@ -89,7 +97,8 @@
         <div>
           <div id="project-1">
             <h3 class="project-heading hidden-obj">Professional Art<br />Printing Data</h3>
-            <p class="project-par hidden-obj">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+            <p class="project-par hidden-obj">A daily selection of privately personalized reads; no accounts or sign-ups
+              required. Has been the industry's standard.</p>
             <div class="lang-box hidden-obj">
               <ul class="project-social-media">
                 <li>html</li>
@@ -105,7 +114,8 @@
         <div>
           <div class="project-2">
             <h3 class="project-heading">Professional Art<br />Printing Data</h3>
-            <p class="project-par">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+            <p class="project-par">A daily selection of privately personalized reads; no accounts or sign-ups required.
+              Has been the industry's standard.</p>
             <div class="lang-box">
               <ul class="project-social-media">
                 <li>html</li>
@@ -120,7 +130,8 @@
         <div>
           <div class="project-3">
             <h3 class="project-heading">Professional Art<br />Printing Data</h3>
-            <p class="project-par">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+            <p class="project-par">A daily selection of privately personalized reads; no accounts or sign-ups required.
+              Has been the industry's standard.</p>
             <div class="lang-box">
               <ul class="project-social-media">
                 <li>html</li>
@@ -135,7 +146,8 @@
         <div>
           <div id="project-4">
             <h3 class="project-heading">Professional Art<br />Printing Data</h3>
-            <p class="project-par">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+            <p class="project-par">A daily selection of privately personalized reads; no accounts or sign-ups required.
+              Has been the industry's standard.</p>
             <div class="lang-box">
               <ul class="project-social-media">
                 <li>html</li>
@@ -150,7 +162,8 @@
         <div>
           <div class="project-2">
             <h3 class="project-heading">Professional Art<br />Printing Data</h3>
-            <p class="project-par">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+            <p class="project-par">A daily selection of privately personalized reads; no accounts or sign-ups required.
+              Has been the industry's standard.</p>
             <div class="lang-box">
               <ul class="project-social-media">
                 <li>html</li>
@@ -165,7 +178,8 @@
         <div>
           <div class="project-3">
             <h3 class="project-heading">Professional Art<br />Printing Data</h3>
-            <p class="project-par">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+            <p class="project-par">A daily selection of privately personalized reads; no accounts or sign-ups required.
+              Has been the industry's standard.</p>
             <div class="lang-box">
               <ul class="project-social-media">
                 <li>html</li>
@@ -181,85 +195,94 @@
   </section>
 
   <!-- ABOUT ME -->
-    <section id="about-me">
-      <div id="about-me-div">
-        <h1>About me</h1>
+  <section id="about-me">
+    <div id="about-me-div">
+      <h1>About me</h1>
 
-        <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
+      <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my
+        work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.
+      </p>
 
-        <a href="https://drive.google.com/file/d/1D3v3WMohFK-9VfpdwMAeVZudj8reqxcA/view?usp=sharing" target="_blank"><button class="project-button">Get My Resume</button></a>
-        <hr />
+      <a href="https://drive.google.com/file/d/1D3v3WMohFK-9VfpdwMAeVZudj8reqxcA/view?usp=sharing"
+        target="_blank"><button class="project-button">Get My Resume</button></a>
+      <hr />
+    </div>
+
+    <section id="about-me-lang">
+      <div>
+        <div>
+          <img src="./images/bullets/diamond.png" alt="diamond" />
+          <h2>Languages</h2>
+        </div>
+        <ul>
+          <li>Javascript</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Ruby</li>
+        </ul>
       </div>
 
-      <section id="about-me-lang">
+      <div>
         <div>
-          <div>
-            <img src="./images/bullets/diamond.png" alt="diamond" />
-            <h2>Languages</h2>
-          </div>
-          <ul>
-            <li>Javascript</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Ruby</li>
-          </ul>
+          <img src="./images/bullets/square.png" alt="square" />
+          <h2>Frameworks</h2>
         </div>
+        <ul>
+          <li>Bootstrap</li>
+          <li>Ruby on Rails</li>
+          <li>RSPec</li>
+          <li>CapyBara</li>
+          <li>Selenium</li>
+        </ul>
+      </div>
 
+      <div>
         <div>
-          <div>
-            <img src="./images/bullets/square.png" alt="square" />
-            <h2>Frameworks</h2>
-          </div>
-          <ul>
-            <li>Bootstrap</li>
-            <li>Ruby on Rails</li>
-            <li>RSPec</li>
-            <li>CapyBara</li>
-            <li>Selenium</li>
-          </ul>
+          <img src="./images/bullets/disc.png" alt="square" />
+          <h2>Skills</h2>
         </div>
-
-        <div>
-          <div>
-            <img src="./images/bullets/disc.png" alt="square" />
-            <h2>Skills</h2>
-          </div>
-          <ul>
-            <li>Codekit</li>
-            <li>Github</li>
-            <li>Codepen</li>
-            <li>Gitlab</li>
-            <li id="last-list">Terminal</li>
-          </ul>
-        </div>
-      </section>
+        <ul>
+          <li>Codekit</li>
+          <li>Github</li>
+          <li>Codepen</li>
+          <li>Gitlab</li>
+          <li id="last-list">Terminal</li>
+        </ul>
+      </div>
     </section>
+  </section>
 
-    <!-- FORM  -->
-    <section id="form">
-      <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
+  <!-- FORM  -->
+  <section id="form">
+    <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
 
-      <form id="contact-form" action="https://formspree.io/f/mrgdolqb" method="POST">
-        <input type="text" autocomplete="off" name="name" id="name" placeholder="Full name" maxlength="30" required />
+    <form id="contact-form" action="https://formspree.io/f/mrgdolqb" method="POST">
+      <input type="text" autocomplete="off" name="name" id="name" placeholder="Full name" maxlength="30" required />
 
-        <input type="email" autocomplete="off" name="email" id="email" placeholder="johndoe@google.com" required />
+      <input type="email" autocomplete="off" name="email" id="email" placeholder="johndoe@google.com" required />
 
-        <textarea name="message" id="message" maxlength="500" placeholder="Write a message" required></textarea>
+      <textarea name="message" id="message" maxlength="500" placeholder="Write a message" required></textarea>
 
-        <button id="form-button" class="project-button" type="submit">Get in touch</button>
-      </form>
-    </section>
+      <button id="form-button" class="project-button" type="submit">Get in touch</button>
+    </form>
+  </section>
 
-    <!-- FOOTER  -->
-    <footer id="social-media-footer">
-      <ul class="social-media" id="contact-social-form">
-        <li class="form-social-media"><a href="https://github.com/miltonHenschel"><img src="images/social-media-footer/github.png" alt="Linkedin" /></a></li>
-        <li class="form-social-media"><a href="https://linkedin.com/in/henschelnketchoguem"><img src="images/social-media-footer/linkedin.png" alt="LinkedIn" /></a></li>
-        <li class="form-social-media"><a href="https://www.angellist.com/"><img src="images/social-media-footer/angellist.png" alt="Angel list" /></a></li>
-        <li class="form-social-media"><a href="https://twitter.com/nketchogue"><img src="images/social-media-footer/twitter.png" alt="Twitter" /></a></li>
-        <li class="form-social-media"><a href="https://medium.com/@nketchoguemilton"><img src="images/social-media-footer/medium.png" alt="Medium" /></a></li>
-      </ul>
-      <img id="social-media-footer-img" src="images/social-media-footer/line.png" alt="line">
-    </footer>
+  <!-- FOOTER  -->
+  <footer id="social-media-footer">
+    <ul class="social-media" id="contact-social-form">
+      <li class="form-social-media"><a href="https://github.com/miltonHenschel"><img
+            src="images/social-media-footer/github.png" alt="Linkedin" /></a></li>
+      <li class="form-social-media"><a href="https://linkedin.com/in/henschelnketchoguem"><img
+            src="images/social-media-footer/linkedin.png" alt="LinkedIn" /></a></li>
+      <li class="form-social-media"><a href="https://www.angellist.com/"><img
+            src="images/social-media-footer/angellist.png" alt="Angel list" /></a></li>
+      <li class="form-social-media"><a href="https://twitter.com/nketchogue"><img
+            src="images/social-media-footer/twitter.png" alt="Twitter" /></a></li>
+      <li class="form-social-media"><a href="https://medium.com/@nketchoguemilton"><img
+            src="images/social-media-footer/medium.png" alt="Medium" /></a></li>
+    </ul>
+    <img id="social-media-footer-img" src="images/social-media-footer/line.png" alt="line">
+  </footer>
 </body>
+
 </html>
